--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
-"scripts": {
-  "start": "node chatbot.js"
-}
 {
+  "name": "chatbot",
+  "version": "1.0.0",
+  "main": "chatbot.js",
+  "scripts": {
+    "start": "node chatbot.js"
+  },
   "dependencies": {
     "moment-timezone": "^0.5.45",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "" 
+    "whatsapp-web.js": "^1.21.1"
   }
 }
