--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "moment-timezone": "^0.5.45",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.21.1"
+    "whatsapp-web.js": "^1.21.1",
+    "qrcode": "^1.5.1"
   }
 }
