--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node chatbot.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "moment-timezone": "^0.5.45",
+    "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.21.1",
-    "qrcode": "^1.5.1"
+    "whatsapp-web.js": "^1.21.1"
   }
 }
